--- a/Main_Script.html
+++ b/Main_Script.html
@@ -16,7 +16,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background-image: url('your-background-image.jpg');
+            background-image: url('forest-woods-misty-forest-trees-preview.jpg');
             background-size: cover;
             background-position: center;
         }
@@ -61,7 +61,7 @@
 </head>
 <body>
     <audio id="background-audio" autoplay loop>
-        <source src="your-audio-file.mp3" type="audio/mp3">
+        <source src="Shepard_Tone.mp3" type="audio/mp3">
     </audio>
 
     <div class="center-content">
