--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     </audio>
 
     <div class="center-content">
-        <input type="text" id="input-box" placeholder="Enter the code" />
+        <input type="text" id="input-box" placeholder="Password" />
         <button onclick="checkInput()">Enter</button>
     </div>
 
     <div id="result-text" class="hidden">
         <p>Qnxb ic wwylo cd tnolxl labfyd u'gmgrzc gwwnpzwr</p>
-        <p><a href="https://youtu.be/JF2F6dCG3VM" target="_blank">Link 1</a></p>
-        <p><a href="https://youtu.be/qAjHA0eSW-w" target="_blank">Link 2</a></p>
+        <p><a href="https://youtu.be/JF2F6dCG3VM" target="_blank">#################</a></p>
+        <p><a href="https://youtu.be/qAjHA0eSW-w" target="_blank">#################</a></p>
     </div>
 
     <script src="script.js"></script>
