--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <div id="result-text" class="hidden">
         <p>Qnxb ic wwylo cd tnolxl labfyd u'gmgrzc gwwnpzwr</p>
-        <p><a href="https://youtu.be/JF2F6dCG3VM" target="_blank">#################</a></p>
-        <p><a href="https://youtu.be/qAjHA0eSW-w" target="_blank">#################</a></p>
+        <p><a href="https://youtu.be/JF2F6dCG3VM" target="_blank">1#############combiner</a></p>
+        <p><a href="https://youtu.be/qAjHA0eSW-w" target="_blank">2#####################</a></p>
     </div>
 
     <script src="script.js"></script>
